--- a/style.css
+++ b/style.css
@@ -222,3 +222,111 @@ body {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+/* Search Results Styles */
+.search-results {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100vh;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    padding: 20px;
+    overflow-y: auto;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    opacity: 0;
+}
+
+.search-results.open {
+    display: block;
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.results-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#results-content {
+    margin-bottom: 20px;
+}
+
+#copy-button {
+    background-color: #1abc9c;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#copy-button:hover {
+    background-color: #16a085;
+}
+
+/* Animation for shifting main content */
+.main.shift-left {
+    transform: translateX(-25%);
+    transition: transform 0.5s ease;
+}
+
+/* Result Box Styles */
+.result-box {
+    background-color: #34495e;
+    color: #ecf0f1;
+    padding: 8px;
+    margin: 16px 0px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.result-box:hover {
+    background-color: #1abc9c;
+}
+
+/* Search Result Box Styles */
+.search-result-box {
+    background-color: #1e272e;
+    color: #ffffff;
+    padding: 18px;
+    margin: 21px 486px;
+    border-radius: 23px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.search-result-box:hover {
+    background-color: #1abc9c;
+}
+
+.fade-in {
+    animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-out {
+    animation: fadeOut 0.5s ease-in-out;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
